syntax = "proto3";

message CreateMatch {
  string match_id = 1;
}

message JoinMatch {
  string match_id = 1;
}